BankAPI/bank-api-pod.yml
apiVersion: v1

kind: Pod

metadata: 
  name: bankapi-pod
  namespace: havgin-space
  labels: 
    app: bankapi-demo 

spec: 
  restartPolicy: Never 
  containers: 
    - name: bankapi-demo-pod
      image: lherrera0/bank-api:latest
      imagePullPolicy: Always 
      ports: 
        - containerPort: 7500
