BankAPI/bank-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapi-service
  namespace: havgin-space
  labels:
    app: bankapi-service
spec:
  selector:
    app: bankapi-demo
  ports:
    - port: 80
      targetPort: 7500
