BankAPI/bank-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: batch-ingress
  namespace: havgin-space
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/grafana/?(.*)"
        backend:
          service:
            name: monitoring-grafana
            port: 
              number: 80
      - pathType: Prefix
        path: "/thisdotsuper/?(.*)" # need to change prometheus root url
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port: 
              number: 9090
      - pathType: Prefix
        path: "/alert-manager/?(.*)"
        backend:
          service:
            name: monitoring-kube-prometheus-alertmanager
            port:
              number: 9093
