BankAPI/bank-api-micrometer.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: bankapi-ingress 
  namespace: this-dot-super-space
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/thisteam/(.*)"
          backend: 
            service: 
              name: bankapi-service
              port: 
                number: 7500
